Added nbt reader for the future Added ChannelDatabase Channels now uses ChannelDatabase Small rework of management channel